cc_library(
    name = "yaml2argdata",
    hdrs = [
        "yaml2argdata/yaml_argdata_factory.h",
        "yaml2argdata/yaml_builder.h",
        "yaml2argdata/yaml_canonicalizing_factory.h",
        "yaml2argdata/yaml_error_factory.h",
        "yaml2argdata/yaml_factory.h",
    ],
    strip_include_prefix = ".",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_jbeder_yaml_cpp//:yaml_cpp",
        "@org_cloudabi_argdata//:argdata",
    ],
)
